fix: right-align deadline counter on small screens

--- a/static/css/deadlines.css
+++ b/static/css/deadlines.css
@@ -194,6 +194,7 @@ footer {
   vertical-align: top;
   margin-top: 2px;
   margin-left: 2px;
+  margin-right: 2px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -239,6 +240,11 @@ footer {
   }
   .conf-title-small {
     display: inline;
+  }
+  #deadline-overview {
+    /* margin-left: auto; */
+    /* margin-right: 0; */
+    text-align: right;
   }
 }
 
